Fix alignment; clean up code

--- a/packages/usa-alert/src/styles/_usa-alert.scss
+++ b/packages/usa-alert/src/styles/_usa-alert.scss
@@ -25,8 +25,6 @@ $alert-icons: (
 
     .usa-alert__body {
       @include alert-status-body-styles($name, $icon);
-
-      @include site-alert-icon-left-alignment;
     }
   }
 }
