--- a/packages/usa-site-alert/src/styles/_usa-site-alert.scss
+++ b/packages/usa-site-alert/src/styles/_usa-site-alert.scss
@@ -19,7 +19,13 @@ $site-alert-icons: (
 
     .usa-alert__body {
       @include alert-status-body-styles($name, $icon);
-      @include site-alert-wrapper;
+      @include u-maxw($theme-site-alert-max-width);
+
+      // Align content with site margins at desktop
+      @include at-media($theme-site-margins-breakpoint) {
+        @include u-margin-x("auto");
+        left: units($theme-site-margins-width);
+      }
     }
   }
 }
