--- a/packages/uswds-core/src/styles/mixins/helpers/alert-status-styles.scss
+++ b/packages/uswds-core/src/styles/mixins/helpers/alert-status-styles.scss
@@ -13,59 +13,11 @@
 
 $alert-icon-gap: 1.5;
 $alert-slim-icon-size: 3;
-$alert-icon-size: units($theme-alert-icon-size);
+$alert-slim-icon-padding: 1;
 
-
-$alert-margin-x-text: calc(
-  units($theme-alert-padding-x) +
-  units($alert-icon-gap) +
-  units($theme-alert-icon-size)
-);
-$alert-slim-margin-x-text: calc(
-  units($theme-alert-padding-x) + units($alert-icon-gap) +
-  units($alert-slim-icon-size)
-);
-
-// align with site margins
-// desktop styles
-$site-alert-x-align-container: calc(
-  units($theme-site-margins-width)
-);
-$site-alert-x-align-text-with-icon: calc(
-  units($theme-alert-icon-size) + units($alert-icon-gap)
-);
-$site-alert-x-align-text-with-slim-icon: calc(
-  units($alert-slim-icon-size) + units($alert-icon-gap)
-);
-
-// mobile styles
-$site-alert-x-align-container-mobile: units($alert-icon-gap);
-$site-alert-x-align-text-with-icon-mobile: calc(
-  $site-alert-x-align-container-mobile + units($theme-alert-icon-size) +
-    units($alert-icon-gap)
-);
-$site-alert-x-align-text-with-slim-icon-mobile: calc(
-  $site-alert-x-align-container-mobile + units($alert-slim-icon-size) +
-    units($alert-icon-gap)
-);
-
-
-@mixin site-alert-wrapper {
-  @include u-margin-x("auto");
-  left: units($theme-alert-bar-width);
-
-  @include at-media($theme-site-margins-breakpoint) {
-    left: $site-alert-x-align-container;
-  }
-}
-
-@mixin site-alert-icon-left-alignment {
-  left: $site-alert-x-align-container-mobile;
-
-  @include at-media($theme-site-margins-breakpoint) {
-    left: $site-alert-x-align-container;
-  }
-}
+// shared icon styles
+$alert-x-align-text-with-icon: calc(units($theme-alert-icon-size) + units($alert-icon-gap));
+$alert-x-align-text-with-slim-icon: calc(units($alert-slim-icon-size) + units($alert-icon-gap));
 
 // Base alert styles
 @mixin alert-styles {
@@ -95,7 +47,6 @@ $site-alert-x-align-text-with-slim-icon-mobile: calc(
   .usa-alert__body {
     @include border-box-sizing;
     @include typeset($theme-alert-font-family);
-    @include u-maxw($theme-site-alert-max-width);
     @include u-padding-y($theme-alert-padding-y);
     position: relative;
 
@@ -152,11 +103,15 @@ $site-alert-x-align-text-with-slim-icon-mobile: calc(
   @include add-alert-icon($icon, $banner-text-color-token, $bgcolor);
   @include set-text-and-bg($bgcolor);
 
+  margin-left: calc(units($theme-alert-bar-width) + units($theme-alert-padding-x));
+
   .usa-alert__heading,
   .usa-alert__text {
-    margin-left: $site-alert-x-align-text-with-icon-mobile;
+    margin-left: $alert-x-align-text-with-icon;
+    margin-right: units(3);
+
     @include at-media($theme-site-margins-breakpoint) {
-      margin-left: $site-alert-x-align-text-with-icon;
+      margin-left: $alert-x-align-text-with-icon;
     }
   }
 
@@ -183,15 +138,11 @@ $site-alert-x-align-text-with-slim-icon-mobile: calc(
     @include add-color-icon($this-icon-object, $bgcolor);
     content: "";
     display: block;
-    left: $site-alert-x-align-container-mobile;
     position: absolute;
     top: calc(
       units($theme-alert-padding-y) - units($theme-alert-icon-size) / 6
     );
 
-    @include at-media($theme-site-margins-breakpoint) {
-      left: 0;
-    }
   }
 }
 
@@ -204,7 +155,7 @@ $site-alert-x-align-text-with-slim-icon-mobile: calc(
 
     .usa-alert__heading,
     .usa-alert__text {
-      margin-left: calc($site-alert-x-align-container-mobile * 2);
+      margin-left: 0;
 
       @include at-media($theme-site-margins-breakpoint) {
         margin-left: 0;
@@ -214,26 +165,28 @@ $site-alert-x-align-text-with-slim-icon-mobile: calc(
 }
 
 // Variant - slim
-@mixin add-slim-alert-icon {
+@mixin add-slim-alert-icon  {
   &:before {
     @supports (mask: url("")) {
       mask-size: units($alert-slim-icon-size);
     }
-    top: calc(units($alert-slim-icon-size) / 6);
+    height: units($alert-slim-icon-size);
+    width: units($alert-slim-icon-size);
+    top: units($alert-slim-icon-padding);
   }
 }
 
 @mixin alert-styles-slim {
   .usa-alert__body {
-    @include u-padding-y(1);
+    @include u-padding-y($alert-slim-icon-padding);
     @include add-slim-alert-icon;
 
     .usa-alert__heading,
     .usa-alert__text {
-      margin-left: $site-alert-x-align-text-with-slim-icon-mobile;
+      margin-left: $alert-x-align-text-with-slim-icon;
 
       @include at-media($theme-site-margins-breakpoint) {
-        margin-left: $site-alert-x-align-text-with-slim-icon;
+        margin-left: $alert-x-align-text-with-slim-icon;
       }
     }
   }
